test/libyul/yulSyntaxTests/dot_consecutive_function.yul
{
    function x..y() {}
}
// ----
// SyntaxError 7771: (6-24='function x..y() {}'): "x..y" is not a valid identifier (contains consecutive dots).
